# tg_notifier

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
src/tg_notifier/: __init__.py  cli.py  tg_notifier.py
tests/: __init__.py  test_tg_notifier.py
