[project]
name = "tg_notifier"
version = "0.1.1"
description = "A lightweight Python library for sending instant notifications to Telegram via Bot API. Easily reusable across multiple projects with minimal setup."
readme = "README.md"
authors = [
  {name = "YS Chiu", email = "shine55660000@gmail.com"}
]
maintainers = [
  {name = "YS Chiu", email = "shine55660000@gmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]
bugs = "https://github.com/shine0941/tg_notifier/issues"
changelog = "https://github.com/shine0941/tg_notifier/blob/master/changelog.md"
homepage = "https://github.com/shine0941/tg_notifier"

[project.scripts]
tg_notifier = "tg_notifier.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
